<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textSize="25sp"
        android:textColor="@color/purple_700"
        android:text="@string/app_desc">
    </TextView>

    <Button
        android:id="@+id/btnPlayListMuz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/go_to_playlist">
    </Button>

    <Button
        android:id="@+id/btnStartMuz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/start_listening">
    </Button>

    <Button
        android:id="@+id/btnStopMuz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/stop_listening">
    </Button>

</LinearLayout>